--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-firebase-hooks": "^5.1.1",
     "react-native": "0.76.3",
     "react-native-calendars": "^1.1307.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-modal": "^13.0.1",
     "react-native-picker-select": "^9.3.1",
@@ -50,6 +51,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-toast-message": "^2.2.1",
+    "react-native-video": "^6.8.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2"
   },
